--- a/masapihelper-master/static/tab_home.html
+++ b/masapihelper-master/static/tab_home.html
@@ -1,5 +1,5 @@
 
-<p>Viya API Helper is a tool to support the API usage of SAS Viya. It provides a user interface to use API's like getting all mas modules and seding events </p>
+<p>Viya API Helper is a tool to support the API usage of SAS Viya. It provides a user interface to use API's like getting all mas modules and sending events </p>
 
 <div class="bd-example">
   <div class="form-row">
