--- a/SimpleReactViyaApp/example.html
+++ b/SimpleReactViyaApp/example.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/combine/npm/chart.js@2.9.3,npm/jquery@3.5.1,npm/@sasjs/adapter@1"></script>
+    <script src="https://cdn.jsdelivr.net/combine/npm/chart.js@2.9.3,npm/jquery@3.5.1,npm/@sasjs/adapter@1"></script> 
     <script>
       var sasJs = new SASjs.default({
          appLoc: "/Public/app/readme"
         ,serverType:"SASVIYA"
         ,debug: false
-        ,useComputeApi: true
+	      ,useComputeApi: true
       });
+
       function initSasJs() {
         $('#loading-spinner').show()
         // instantiate sasjs with options such as backend app location
@@ -25,6 +26,7 @@
           }
         })
       }
+      
       function getData(){
         $('#loading-spinner').show()
         $('#myChart').remove();
@@ -34,7 +36,7 @@
         // request data from an endpoint under your appLoc (missing opening slash implies relative path)
         sasJs.request("common/getdata", {
             // send data as an array of objects - each object is one row
-            fromjs: [{ type: type }]
+            fromjs2: [{ type: type }]
         }).then((response) => {
           $('#myChart').show();
           var labels = []
@@ -72,8 +74,7 @@
       }
     </script>
     <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sh
-gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
     <div class="container-fluid" style="text-align: center; margin-top: 10px;">
@@ -87,7 +88,7 @@ gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
             <div class="form-group">
               <input class="form-control" type="password" id="password" placeholder="Enter password" />
             </div>
-            <button id="login" onclick="initSasJs()" class="login btn btn-primary" style="margin-bottom: 5px;">Log In</b
+            <button id="login" onclick="initSasJs()" class="login btn btn-primary" style="margin-bottom: 5px;">Log In</button>
           </div>
           <select name="cars" id="cars" style="margin-bottom: 5px; display: none;" class="form-control">
             <option value="Hybrid">Hybrid</option>
@@ -97,7 +98,7 @@ gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
             <option value="Truck">Truck</option>
             <option value="Wagon">Wagon</option>
           </select>
-          <button id="getdata" onclick="getData()" style="margin-bottom: 5px; display: none;" class="btn btn-success">Ge
+          <button id="getdata" onclick="getData()" style="margin-bottom: 5px; display: none;" class="btn btn-success">Get Data</button><br><br>
           <div id="loading-spinner" class="spinner-border text-primary" role="status" style="display: none;">
             <span class="sr-only">Loading...</span>
           </div><br>
@@ -109,3 +110,5 @@ gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </div>
   </body>
 </head>
+
+
